<resources>
    <string name="app_name">B2C</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>

    <string name="title_activity_conectate">Conectate</string>
    <string name="title_activity_registrate">Registrate</string>
    <string name="appNombre">B2C</string>
    <string name="opcion1">Conéctate</string>
    <string name="opcion2">Regístrate</string>
    <string name="title_activity_inmuebles">Inmuebles</string>
    <string name="title_activity_login">Login</string>
    <string name="title_favoritos_activity">Favoritos</string>
    <string name="title_modificar_usuario_activity">Modificar Usuario</string>

    <!-- Menus -->
    <string name="menu_mis_inmuebles">Mis Inmuebles</string>
    <string name="menu_creados">Creados</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_ordenar">Ordenar</string>

    <!-- REGISTRAR INMUEBLE -->
    <string name="hint_Titulo">Ingrese el título</string>
    <string name="Precio">Precio: </string>
    <string name="AreaTotal">Área total: </string>
    <string name="AreaConstruida">Área construida</string>
    <string name="Dormitorios">Dormitorios: </string>
    <string name="Banos">Baños: </string>
    <string name="Estacionamientos">Estacionamientos: </string>
    <string name="Antiguedad">Antigüedad: </string>
    <string name="TipoTransaccion">Tipo de transacción: </string>
    <string name="TipoInmueble">Tipo de inmueble</string>
    <string name="hint_telefono">Teléfono </string>
    <string name="hint_email">Email </string>
    <string name="hint_direccion">Dirección </string>
    <string name="hint_distrito">Distrito </string>
    <string name="hint_Descripcion">Descripción</string>
    <string name="btnRegistrar">Registrar </string>
    <string name="btnCancelar">Cancelar </string>


    <!-- STRING ARRAY PARA SPINNER TIPO DE TRANSACCION -->
    <string-array name="opcionesSpinnerTipoTransaccion">
        <item>Venta</item>
        <item>Alquiler</item>
    </string-array>

    <!-- STRING ARRAY PARA SPINNER TIPO DE INMUEBLE -->
    <string-array name="opcionesSpinnerTipoInmueble">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Oficina</item>
    </string-array>

    <string name="precioInicial">S/. 0</string>
    <string name="areaInicial">0 m2</string>
    <string name="tiempoInicial">0 años</string>
    <string name="cero">0</string>
<<<<<<< HEAD
    <string name="TipoInmueble">Tipo de inmueble</string>

    <!-- CONFIGURACION -->
    <string name="titulo">titulo</string>
    <string name="radioBusqueda"> Radio de Búsqueda </string>
    <string name="valorRadio">50 Km</string>
    <string name="y">titulo</string>
    <string name="pref_titulo">Configuraciones B2C</string>
    <string name="pref_summary">pref_summary</string>

=======
>>>>>>> 03b512141f9c8ec582da601ebffc080cf3f66a9b

</resources>
