<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InmueblesActivity">


    <item android:id="@+id/menu_ordenar"
        android:title="@string/menu_ordenar"
        android:icon="@drawable/abc_ic_menu_paste_mtrl_am_alpha"
        app:showAsAction="ifRoom">
        <menu>
            <group android:menuCategory="container">
                <item android:id="@+id/menu_ordenar_favoritos"
                    android:title="Ordenar por Favoritos" />
                <item android:id="@+id/menu_ordenar_fecha"
                    android:title="Ordenar por Fecha" />
                <item android:id="@+id/menu_ordenar_precio"
                    android:title="Ordenar por Precio" />
            </group>
        </menu>
    </item>


    <item android:id="@+id/menu_ajustes"
        android:title="@string/menu_ajustes"
        android:icon="@drawable/ic_action_gear"
        app:showAsAction="ifRoom">
        <menu>
            <group android:menuCategory="container">
                <item android:id="@+id/menu_configuracion"
                    android:title="@string/menu_configuracion" />
                <item android:id="@+id/menu_cerrar_sesion"
                    android:title="@string/menu_cerrar_sesion" />
            </group>
        </menu>
    </item>





</menu>
