<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarInmuebleActivity$RegistrarInmuebleFragment"
    android:background="@color/fondo"
    >

        <ScrollView
            android:id="@+id/scrollViewRegistrarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/layout"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/txtTitulo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_Titulo"
                            />

                        <EditText
                            android:id="@+id/txtTelefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_telefono"
                            />

                        <EditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            />

                        <EditText
                            android:id="@+id/txtDireccion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_direccion"
                            />

                        <EditText
                            android:id="@+id/txtDistrito"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_distrito"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@color/fondo"
                        >

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Precio"
                                android:layout_gravity="center_vertical" />

                            <SeekBar
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Area"
                                android:layout_gravity="center_vertical" />

                            <SeekBar
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Antiguedad"
                                android:layout_gravity="center_vertical" />

                            <SeekBar
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Dormitorios"
                                android:layout_gravity="center_vertical" />

                            <SeekBar
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Banos"
                                android:layout_gravity="center_vertical" />

                            <SeekBar
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Estacionamientos"
                                android:layout_gravity="center_vertical" />

                            <SeekBar
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:background="@color/fondo"
                            >

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/TipoTransaccion"
                                android:layout_gravity="center_vertical" />

                            <Spinner
                                android:layout_weight="1"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:entries="@array/opcionesSpinner"
                                ></Spinner>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="20dp"
                            android:background="@color/fondo"></LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnRegistrar"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnRegistrar"/>

                        <Button
                            android:id="@+id/btnCancelar"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnCancelar"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


</FrameLayout>