<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_b2c_icon"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/appNombre" />



        <LinearLayout
            android:id="@+id/row_access_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageButton"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_home_icon"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageButton2"
                    android:src="@drawable/ic_fav_icon"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:onClick="favoritos"/>
            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageButton3"
                    android:src="@drawable/ic_find_icon"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:onClick="prueba" />
            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/row_access_buttons">

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/access_button_text"
                android:gravity="center"
                android:layout_weight="4"
                android:text="Inmuebles"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/access_button_text"
                android:gravity="center"
                android:layout_weight="4"
                android:text="Favoritos"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/access_button_text"
                android:gravity="center"
                android:layout_weight="4"
                android:text="Cerca de mí"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/access_button_text"
                android:text="@string/opcion2"
                android:id="@+id/reg"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/access_button_text"
                android:text="@string/opcion1"
                android:id="@+id/conect"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
